# ResMe

./: README.md  pyproject.toml  requirements.txt  resume.md  version0.py
outputs/: cover_letter_20250811_161639.md  optimized_resume_20250811_161639.md
